<resources>
    <string name="app_name">TestActionBar</string>

    <!-- One fragment -->
    <string name="one_fragment">One fragment</string>
    <string name="camera">Camera</string>
    <string name="photo">Photo</string>
    <string name="rotate_90">Rotate 90</string>
    <string name="people">People</string>
    <string name="people_2">2 people</string>
    <string name="people_3">3 people</string>
    <string name="people_4">4 people</string>
    <string name="people_5">5 people</string>
    <string name="people_6">6 people</string>
    <string name="people_7">7 people</string>
    <string name="people_8">8 people</string>
    <string name="people_9">9 people</string>
    <string name="numbers">Numbers</string>
    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string name="send">Send</string>
    <string name="no_app_to_choose_an_image">No APP to choose an image</string>
    <string name="load_an_image_from">Load an image from</string>

    <!-- Two fragment -->
    <string name="two_fragment">Two fragment</string>
    <string name="add">Add</string>
    <string name="minus">Minus</string>
    <string name="call">Call</string>
</resources>
